WP-1380: Show more is not showing all characters of the body -- FIXED.

--- a/css/style.css
+++ b/css/style.css
@@ -3538,7 +3538,6 @@ ul.slideshow-items {
 .pane-bundle-spotlight .field-name-field-body {
   font-size: 14px;
   margin: 12px 0;
-  max-height: 72px;
   overflow: hidden;
 }
 .pane-bundle-spotlight .field-name-field-body p {
@@ -3555,6 +3554,7 @@ ul.slideshow-items {
   font-weight: bold;
   line-height: 1em;
   margin: 5px 0;
+  padding-left: 238px;
 }
 .pane-bundle-spotlight .show-more span {
   font-size: 14px;
