--- a/sass/revamp-design/_spotlight.sass
+++ b/sass/revamp-design/_spotlight.sass
@@ -65,7 +65,6 @@
   .field-name-field-body
     font-size: 14px
     margin: 12px 0
-    max-height: 72px
     overflow: hidden
     p
       color: $grey-5
@@ -80,6 +79,7 @@
     font-weight: bold
     line-height: 1em
     margin: 5px 0
+    padding-left: 238px
     //text-align: right
     span
       font-size: 14px
